Fixed footer AGAIN. For right padding on mobile
Fixed footer AGAIN. For right padding on mobile

--- a/_includes/css/sticky-footer.css
+++ b/_includes/css/sticky-footer.css
@@ -31,7 +31,6 @@
       @media (max-width: 767px) {
         #footer {
 		  margin-left: -20px;
-          margin-right: -20px;
           padding-left: 20px;
           padding-right: 20px;		  
         }
